# endstone-mediaplayer

./: CMakeLists.txt  README.md  README_ZH.md
.github/workflows/: build.yml  release.yml
include/: abi_helpers.h  endstone_abi.h  music_player.h  platform.h  version.h
include/abi/: linux_x86_64.h  windows_x86_64.h
src/: endstone_api.c  music_player.c  plugin.c  sfunc.c
tests/: test_nbs_parser.c
